# traffic-monitor

./: .gitignore
Shared/: CommunicationHelper.h  Response.h  streets.json
Shared/Helpers/: Logger.h
Shared/Models/: Street.h
client/: CMakeLists.txt  Client.h  main.cpp
client/Models/: Client.cpp  Client.h  Server.cpp  Server.h
server/: CMakeLists.txt  clients.json  main.cpp
server/Handlers/: AccidentHandler.cpp  AccidentHandler.h  Handler.h  HelpHandler.cpp  HelpHandler.h  LicensePlateHandler.cpp  LicensePlateHandler.h  LocationHandler.cpp  LocationHandler.h  NotifierHandler.cpp  NotifierHandler.h  SpeedHandler.cpp  SpeedHandler.h  SubscribeHandler.cpp  SubscribeHandler.h
server/Helpers/: Deserializer.h  JsonHelper.h  Logger.h
server/Models/: Argument.cpp  Argument.h  Client.cpp  Client.h  Command.cpp  Command.h  Response.h  Server.cpp  Server.h  Street.h
